# tix

./: .gitignore  AGENTS.md  CNAME  Cargo.toml  LICENSE  PLUGINS.md  README.md  REQS.md  all.html  help.html  index.html  install_tix.sh  settings.html  src-files.js
.github/: copilot-instructions.md
.github/workflows/: pr-checks.yml  release.yml
core/: index.html  sidebar-items.js
core/cli/: enum.Commands.html  index.html  struct.Cli.html
core/commands/: index.html  sidebar-items.js
core/config/: index.html  struct.Config.html  struct.RepoDefinition.html
core/defaults/: constant.DEFAULT_BRANCH_PREFIX.html  constant.DEFAULT_CODE_DIR_BASENAME.html  constant.DEFAULT_CODE_DIR_FALLBACK.html  constant.DEFAULT_GITHUB_BASE_URL.html  constant.DEFAULT_RELEASE_OWNER.html  constant.DEFAULT_RELEASE_REPO.html  constant.DEFAULT_REPOSITORY_OWNER.html  constant.DEFAULT_TICKETS_DIR_BASENAME.html  constant.DEFAULT_TICKETS_DIR_FALLBACK.html  constant.UPDATE_USER_AGENT.html  index.html
core/git/: fn.clone_repo.html  fn.create_worktree.html  fn.fetch_and_fast_forward.html  fn.is_clean.html  fn.remove_worktree.html  fn.resolve_default_branch.html  index.html  sidebar-items.js
core/ticket/: fn.worktree_name_for_branch.html  index.html  struct.Ticket.html  (+1 more)
docs/: crates.js  help.html  settings.html  src-files.js
plugins/: PLUGINS.md
scripts/: tag_release.sh
search.index/: 04ad069276f0.js  09285d3f8821.js  09d86e94934b.js  10bd9efe3c10.js  1293282bfbfa.js  1358e223baec.js  1b4c7fde62a5.js  220caca0a8ae.js  22415b02a341.js  2322638cab57.js  26a87cd45094.js  2d96a594b07c.js  319dc789ca5a.js  35c391d6db12.js  4054071860f5.js  48d6cd3d4fad.js  4910a85047a5.js  4b35fc3dff1f.js  4b668eb722b0.js  4fddf0f852b8.js  503f3615b072.js  56fc034bf333.js  5801c91d5e7b.js  5e2ad4943c14.js  5eb4c862e45b.js  5edc9c4cc268.js  5f43cf277ae9.js  60385c0f7c30.js  655c5840e4ad.js  66f850555a44.js  687a54f320d0.js  68c480ca680a.js  70dabcb03644.js  75534f423b9c.js  75595a9e9c54.js  77c50724acd8.js  7cde40dc5090.js  root.js
src/: cli.rs  config.rs  git.rs  lib.rs  main.rs  ticket.rs
src/core/: cli.rs  (+6 more)
tests/: cli_integration.rs  git_tests.rs  setup_sanitize.rs
tix/: all.html  index.html
(+293 files in other folders)
