[package]
name = "tix"
version = "2.0.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
clap_complete = "4.5.62"
directories = "6.0.0"
env_logger = "0.11.8"
git2 = { version = "0.20.3", features = ["https", "ssh"] }
home = "0.5.11"
log = "0.4.29"
serde = "1.0.228"
serde_json = "1.0.149"
toml = "0.9.10"
dialoguer = "0.12.0"
assert_cmd = "2.0.16"
predicates = "3.1.0"
tempfile = "3.10.1"
ureq = { version = "3.1.4", features = ["json", "rustls"] }
semver = "1.0.23"
flate2 = "1.0.35"
tar = "0.4.43"
zip = { version = "6.0.0", default-features = false, features = ["deflate"] }
